--- a/chatbot-ui-extension/popup.html
+++ b/chatbot-ui-extension/popup.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>AI Chat Extension</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>AI Assistant</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -11,52 +11,62 @@
                 <button id="chatMode" class="mode-button active">Chat</button>
                 <button id="featuresMode" class="mode-button">Features</button>
             </div>
+            <select id="modelSelector" class="model-selector">
+                <!-- Models will be populated by JavaScript -->
+            </select>
         </div>
-        <div class="chat-container" id="chatContainer">
-            <!-- Chat messages will be displayed here -->
+
+        <div id="chatContainer" class="chat-container">
+            <!-- Chat messages will be added here -->
         </div>
-        <div class="features-panel" id="featuresPanel">
-            <div class="feature-group">
-                <h3>AI Tools</h3>
-                <button class="feature-button" data-feature="prompts">
-                    <span class="icon">💡</span>
-                    Prompts
+
+        <div id="featuresPanel" class="features-panel" style="display: none;">
+            <div class="features-grid">
+                <button class="feature-button" data-feature="screenshot">
+                    <span class="icon">📸</span>
+                    Take Screenshot
                 </button>
-                <button class="feature-button" data-feature="assistants">
-                    <span class="icon">🤖</span>
-                    Assistants
+                <button class="feature-button" data-feature="computer-control" data-action="click element">
+                    <span class="icon">🖱️</span>
+                    Click Element
                 </button>
-                <button class="feature-button" data-feature="files">
-                    <span class="icon">📁</span>
-                    Files
+                <button class="feature-button" data-feature="computer-control" data-action="switch tab">
+                    <span class="icon">📑</span>
+                    Switch Tab
                 </button>
-                <button class="feature-button" data-feature="plugins">
-                    <span class="icon">🧩</span>
-                    Plugins
+                <button class="feature-button" data-feature="computer-control" data-action="navigate">
+                    <span class="icon">🔄</span>
+                    Navigate
+                </button>
+                <button class="feature-button" data-feature="computer-control" data-action="get system info">
+                    <span class="icon">💻</span>
+                    System Info
+                </button>
+                <button class="feature-button" data-feature="computer-control" data-action="check CPU usage">
+                    <span class="icon">📊</span>
+                    CPU Usage
+                </button>
+                <button class="feature-button" data-feature="computer-control" data-action="check memory usage">
+                    <span class="icon">📈</span>
+                    Memory Usage
+                </button>
+                <button class="feature-button" data-feature="computer-control" data-action="list running processes">
+                    <span class="icon">📋</span>
+                    Processes
+                </button>
+                <button class="feature-button" data-feature="computer-control" data-action="check disk space">
+                    <span class="icon">💾</span>
+                    Disk Space
+                </button>
+                <button class="feature-button" data-feature="computer-control" data-action="check network status">
+                    <span class="icon">🌐</span>
+                    Network
                 </button>
             </div>
-            <div class="feature-group">
-                <h3>Special Features</h3>
-                <button class="feature-button" data-feature="splitview">
-                    <span class="icon">⚡</span>
-                    Split View
-                </button>
-                <button class="feature-button" data-feature="memodraw">
-                    <span class="icon">📝</span>
-                    Memo Draw
-                </button>
-                <button class="feature-button" data-feature="texttoimage">
-                    <span class="icon">🎨</span>
-                    Text to Image
-                </button>
-                <button class="feature-button" data-feature="youtube">
-                    <span class="icon">▶️</span>
-                    YouTube Summarizer
-                </button>
-            </div>
         </div>
+
         <div class="input-container">
-            <textarea id="userInput" placeholder="Type your message..."></textarea>
+            <textarea id="userInput" placeholder="Type your message... (Try: 'Take a screenshot' or 'Click the button at coordinates 100,200')" rows="1"></textarea>
             <button id="sendButton">Send</button>
         </div>
     </div>
