--- a/chatbot-ui-extension/popup.html
+++ b/chatbot-ui-extension/popup.html
@@ -66,7 +66,7 @@
         </div>
 
         <div class="input-container">
-            <textarea id="userInput" placeholder="Type your message... (Try: 'Take a screenshot' or 'Click the button at coordinates 100,200')" rows="1"></textarea>
+            <textarea id="userInput" placeholder="Do something ... " rows="1"></textarea>
             <button id="sendButton">Send</button>
         </div>
     </div>
