Refactor Chatbot UI Extension for Enhanced Research Capabilities
- Updated the system prompt to redefine the assistant's role as an AI research assistant, focusing on information gathering and organization.
- Introduced new actions for the assistant, including COPY_TO_DOC and SWITCH_TAB, enhancing its functionality for research tasks.
- Improved the handler function to manage task execution more effectively, including better status updates in the side panel.
- Enhanced the content script with a universal action handler to streamline interactions and support new actions like scrolling and liking posts.
- Updated the manifest to reflect the new name and description, and added permissions for side panel functionality.
- Improved UI elements in the popup and styles for better user experience, including a chat history display and refined message styling.

--- a/chatbot-ui-extension/popup.html
+++ b/chatbot-ui-extension/popup.html
@@ -17,7 +17,9 @@
         </div>
 
         <div id="chatContainer" class="chat-container">
-            <!-- Chat messages will be added here -->
+            <div id="chat-history" class="chat-history">
+                <!-- Chat messages will be added here -->
+            </div>
         </div>
 
         <div id="featuresPanel" class="features-panel" style="display: none;">
