--- a/chatbot-ui-extension/sidebar.html
+++ b/chatbot-ui-extension/sidebar.html
@@ -1,389 +1,344 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Agent Progress</title>
+    <title>AI Assistant Sidebar</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
-        body {
-            margin: 0;
-            padding: 20px;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            background: #f5f5f5;
-            color: #333;
-            line-height: 1.6;
-            height: 100vh;
-            overflow-y: auto;
-            display: flex;
-            flex-direction: column;
+        :root {
+            --primary-color: #2563eb;
+            --primary-hover: #1d4ed8;
+            --success-color: #059669;
+            --error-color: #dc2626;
+            --border-color: #e5e7eb;
+            --bg-color: #ffffff;
+            --text-color: #1f2937;
+            --text-secondary: #6b7280;
+            --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+            --shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1);
         }
 
-        .container {
-            max-width: 100%;
-            margin: 0 auto;
-            flex: 1;
-            overflow-y: auto;
-            padding-bottom: 80px;
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: var(--bg-color);
+            color: var(--text-color);
+            line-height: 1.5;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            padding: 16px;
         }
 
         .header {
-            background: #fff;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            margin-bottom: 20px;
-            position: sticky;
-            top: 0;
-            z-index: 100;
+            margin-bottom: 16px;
         }
 
         .header h1 {
-            margin: 0;
-            font-size: 1.5em;
-            color: #2c3e50;
-        }
-
-        .status {
-            background: #fff;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            margin-bottom: 15px;
-            position: sticky;
-            top: 70px;
-            z-index: 99;
-        }
-
-        .content {
-            background: #fff;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            margin-bottom: 15px;
-            overflow-wrap: break-word;
-        }
-
-        .action {
-            background: #e8f5e9;
-            padding: 12px;
-            border-radius: 6px;
-            margin-bottom: 12px;
-            font-weight: 500;
-        }
-
-        .result {
-            background: #f5f5f5;
-            padding: 12px;
-            border-radius: 6px;
-            margin-top: 8px;
-            margin-bottom: 12px;
-        }
-
-        .error {
-            background: #ffebee;
-            color: #c62828;
-            padding: 12px;
-            border-radius: 6px;
-            margin-bottom: 12px;
-            font-weight: 500;
-        }
-
-        .search-header {
-            background: #fff;
-            padding: 15px;
-            border-radius: 8px 8px 0 0;
-            border-bottom: 2px solid #e8eaed;
-            margin-bottom: 0;
-        }
-
-        .search-timestamp {
-            color: #666;
-            font-size: 0.85em;
-            display: block;
-            margin-top: 5px;
-        }
-
-        .search-results-container {
-            padding: 15px;
-            background: #fff;
-            border-radius: 0 0 8px 8px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-            margin: 0 0 15px 0;
-        }
-
-        .search-result-item {
-            padding: 15px;
-            margin-bottom: 15px;
-            border-radius: 8px;
-            background: #f8f9fa;
-            border-left: 3px solid #1a73e8;
-            transition: all 0.2s ease;
-        }
-
-        .search-result-item:last-child {
-            margin-bottom: 0;
-        }
-
-        .search-result-item:hover {
-            background-color: #f0f2f5;
-            transform: translateX(3px);
-        }
-
-        .result-title {
-            color: #202124;
-            font-size: 1.2em;
+            font-size: 18px;
             font-weight: 600;
-            margin-bottom: 12px;
-            line-height: 1.4;
+            color: var(--text-color);
         }
 
-        .result-content {
-            color: #4a4a4a;
-            font-size: 0.95em;
-            line-height: 1.6;
+        .header p {
+            font-size: 14px;
+            color: var(--text-secondary);
+            margin-top: 4px;
         }
 
-        .result-content p {
-            margin: 8px 0;
-        }
-
-        .section-subtitle {
-            color: #1a73e8;
-            font-size: 1.1em;
-            font-weight: 600;
-            margin: 15px 0 10px;
-        }
-
-        .subsection-title {
-            color: #202124;
-            font-size: 1em;
-            font-weight: 600;
-            margin: 12px 0 8px;
-        }
-
-        .list-item {
-            margin: 8px 0;
-            padding-left: 15px;
-            position: relative;
-        }
-
-        .list-item:before {
-            content: "•";
-            color: #1a73e8;
-            position: absolute;
-            left: 0;
-        }
-
-        .emphasis {
-            color: #666;
-            font-style: italic;
-            margin: 8px 0;
-        }
-
-        .data-row {
-            display: flex;
-            margin: 8px 0;
-            align-items: baseline;
-        }
-
-        .data-label {
-            color: #666;
-            font-weight: 500;
-            margin-right: 8px;
-            min-width: 120px;
-        }
-
-        .data-value {
-            color: #202124;
-            flex: 1;
-        }
-
-        .source-link {
-            display: flex;
-            align-items: center;
-            margin: 8px 0;
-            padding: 8px;
-            background: #fff;
-            border-radius: 6px;
-            transition: background-color 0.2s;
-        }
-
-        .source-link:hover {
-            background: #f0f2f5;
-        }
-
-        .source-favicon {
-            width: 16px;
-            height: 16px;
-            margin-right: 8px;
-            border-radius: 2px;
-        }
-
-        .link-domain {
-            color: #666;
-            font-size: 0.9em;
-            margin-left: 4px;
-        }
-
-        .no-results {
-            text-align: center;
-            padding: 20px;
-            color: #666;
-            font-style: italic;
-        }
-
-        .error-message {
-            background: #ffebee;
-            color: #c62828;
+        .input-container {
+            background: var(--bg-color);
+            border: 1px solid var(--border-color);
+            border-radius: 8px;
             padding: 12px;
-            border-radius: 6px;
-            margin: 10px 0;
-            font-weight: 500;
+            margin-bottom: 16px;
+            box-shadow: var(--shadow-sm);
         }
 
-        pre {
-            background: #f8f9fa;
-            padding: 12px;
-            border-radius: 6px;
-            overflow-x: auto;
-            margin: 10px 0;
-            white-space: pre-wrap;
-            font-size: 0.9em;
-            border: 1px solid #eee;
-        }
-
-        code {
-            font-family: 'Consolas', 'Monaco', monospace;
-            font-size: 0.9em;
-        }
-
-        .markdown {
-            line-height: 1.6;
-        }
-
-        .markdown h1, .markdown h2, .markdown h3 {
-            color: #2c3e50;
-            margin-top: 20px;
-            margin-bottom: 10px;
-        }
-
-        .markdown p {
-            margin: 10px 0;
-        }
-
-        .markdown ul, .markdown ol {
-            padding-left: 20px;
-            margin: 10px 0;
-        }
-
-        .markdown blockquote {
-            border-left: 4px solid #e0e0e0;
-            margin: 10px 0;
-            padding: 10px 15px;
-            color: #666;
-            background: #f8f9fa;
-        }
-
-        .input-area {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background: #fff;
-            padding: 15px 20px;
-            box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
-            display: flex;
-            gap: 10px;
-            z-index: 1000;
-        }
-
-        .input-area textarea {
-            flex: 1;
-            min-height: 40px;
-            max-height: 120px;
-            padding: 8px 12px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
+        #taskInput {
+            width: 100%;
+            min-height: 80px;
+            border: none;
+            resize: vertical;
             font-family: inherit;
             font-size: 14px;
-            resize: none;
-            overflow-y: auto;
-        }
-
-        .input-area textarea:focus {
+            line-height: 1.5;
+            color: var(--text-color);
             outline: none;
-            border-color: #1a73e8;
-            box-shadow: 0 0 0 2px rgba(26,115,232,0.2);
+            margin-bottom: 12px;
         }
 
-        .send-button {
-            background: #1a73e8;
+        #executeBtn {
+            width: 100%;
+            padding: 8px 16px;
+            background-color: var(--primary-color);
             color: white;
             border: none;
-            padding: 8px 20px;
-            border-radius: 4px;
-            cursor: pointer;
+            border-radius: 6px;
             font-size: 14px;
             font-weight: 500;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-width: 80px;
+            cursor: pointer;
             transition: background-color 0.2s;
         }
 
-        .send-button:hover {
-            background: #1557b0;
+        #executeBtn:hover {
+            background-color: var(--primary-hover);
         }
 
-        .send-button:disabled {
-            background: #ccc;
+        #executeBtn:disabled {
+            background-color: var(--text-secondary);
             cursor: not-allowed;
         }
 
-        .clear-button {
-            position: fixed;
-            bottom: 90px;
-            right: 20px;
-            background: #1a73e8;
-            color: white;
-            border: none;
-            padding: 8px 16px;
+        #progressContainer {
+            display: none;
+            margin: 16px 0;
+            padding: 12px;
+            background: #f9fafb;
+            border-radius: 6px;
+        }
+
+        #progressContainer p {
+            font-size: 14px;
+            color: var(--text-secondary);
+            margin-bottom: 8px;
+        }
+
+        progress {
+            width: 100%;
+            height: 6px;
+            border-radius: 3px;
+            -webkit-appearance: none;
+        }
+
+        progress::-webkit-progress-bar {
+            background-color: #e5e7eb;
+            border-radius: 3px;
+        }
+
+        progress::-webkit-progress-value {
+            background-color: var(--primary-color);
+            border-radius: 3px;
+            transition: width 0.3s ease;
+        }
+
+        #status {
+            font-size: 14px;
+            padding: 12px;
+            border-radius: 6px;
+            margin: 16px 0;
+            display: none;
+        }
+
+        #status.success {
+            background: #ecfdf5;
+            color: var(--success-color);
+            border: 1px solid #a7f3d0;
+        }
+
+        #status.error {
+            background: #fef2f2;
+            color: var(--error-color);
+            border: 1px solid #fecaca;
+        }
+
+        #outputContainer {
+            flex: 1;
+            overflow-y: auto;
+            border: 1px solid var(--border-color);
+            border-radius: 8px;
+            background: #f9fafb;
+            padding: 16px;
+            margin-top: 16px;
+        }
+
+        .action-log {
+            background: white;
+            margin: 8px 0;
+            padding: 12px;
+            border-radius: 6px;
+            border: 1px solid var(--border-color);
+            box-shadow: var(--shadow-sm);
+        }
+
+        .action-log .timestamp {
+            font-size: 12px;
+            color: var(--text-secondary);
+            margin-bottom: 4px;
+        }
+
+        .action-log .content {
+            font-size: 14px;
+            color: var(--text-color);
+        }
+
+        .screenshot {
+            max-width: 100%;
+            height: auto;
+            border-radius: 6px;
+            margin: 8px 0;
+            border: 1px solid var(--border-color);
+        }
+
+        .clear-btn {
+            position: absolute;
+            top: 16px;
+            right: 16px;
+            padding: 6px 12px;
+            font-size: 12px;
+            color: var(--text-secondary);
+            background: transparent;
+            border: 1px solid var(--border-color);
             border-radius: 4px;
             cursor: pointer;
+            transition: all 0.2s;
+        }
+
+        .clear-btn:hover {
+            background: #f3f4f6;
+            color: var(--text-color);
+        }
+
+        .button-container {
+            display: flex;
+            gap: 8px;
+        }
+
+        .stop-btn {
+            padding: 8px 16px;
+            background-color: var(--error-color);
+            color: white;
+            border: none;
+            border-radius: 6px;
             font-size: 14px;
             font-weight: 500;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+            cursor: pointer;
             transition: background-color 0.2s;
         }
 
-        .clear-button:hover {
-            background: #1557b0;
+        .stop-btn:disabled {
+            background-color: var(--text-secondary);
+            cursor: not-allowed;
+        }
+
+        .stop-btn:hover:not(:disabled) {
+            background-color: #b91c1c;
+        }
+
+        /* Add styles for status items */
+        .status-item {
+            background: white;
+            margin: 8px 0;
+            padding: 12px;
+            border-radius: 6px;
+            border: 1px solid var(--border-color);
+            box-shadow: var(--shadow-sm);
+        }
+
+        .status-item .timestamp {
+            font-size: 12px;
+            color: var(--text-secondary);
+            display: block;
+            margin-bottom: 4px;
+        }
+
+        .status-item .message {
+            font-size: 14px;
+            color: var(--text-color);
+            margin-bottom: 4px;
+        }
+
+        .status-item .step-counter {
+            font-size: 12px;
+            color: var(--primary-color);
+            font-weight: 500;
+            margin-top: 4px;
+        }
+
+        .status-item .page-info {
+            font-size: 12px;
+            color: var(--text-secondary);
+            margin-top: 4px;
+            padding: 2px 6px;
+            background: #f3f4f6;
+            border-radius: 4px;
+            display: inline-block;
+        }
+
+        .status-item .extracted-content {
+            font-size: 12px;
+            color: var(--text-color);
+            margin-top: 8px;
+            padding: 8px;
+            background: #f9fafb;
+            border-radius: 4px;
+            border: 1px solid var(--border-color);
+            max-height: 100px;
+            overflow-y: auto;
+        }
+
+        .status-item.message {
+            border-left: 3px solid var(--primary-color);
+        }
+
+        .status-item.action {
+            border-left: 3px solid var(--success-color);
+        }
+
+        .status-item.error {
+            border-left: 3px solid var(--error-color);
+        }
+
+        .status-item.step {
+            border-left: 3px solid #8b5cf6;
+        }
+
+        .status-item.complete {
+            border-left: 3px solid var(--success-color);
+            background: #ecfdf5;
+        }
+
+        #progressContainer {
+            background: white;
+            border: 1px solid var(--border-color);
+            border-radius: 6px;
+            padding: 12px;
+            margin: 16px 0;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h1>Agent Progress</h1>
-        </div>
-        <div id="status" class="status">
-            <div class="status-label">Current Status:</div>
-            <div id="current-status">Initializing...</div>
-        </div>
-        <div id="content" class="content">
-            <!-- Dynamic content will be inserted here -->
-        </div>
-        <button id="clear-content" class="clear-button">Clear</button>
+    <div class="header">
+        <h1>AI Assistant</h1>
+        <p>Enter your task below and I'll help you complete it</p>
     </div>
-    <div class="input-area">
+
+    <div class="input-container">
         <textarea 
-            id="user-input" 
-            placeholder="Type your message here..."
-            rows="1"
-            maxlength="1000"
+            id="taskInput" 
+            placeholder="What would you like me to do? For example: 'Search for TSLA news and save it to Google Docs'"
         ></textarea>
-        <button id="send-button" class="send-button">Send</button>
+        <div class="button-container">
+            <button id="executeBtn">Execute Task</button>
+            <button id="stopBtn" class="stop-btn" disabled>Stop Task</button>
+        </div>
     </div>
+
+    <div id="progressContainer">
+        <p>Step <span id="currentStep">0</span> of <span id="maxSteps">10</span></p>
+        <progress id="progress" value="0" max="10"></progress>
+    </div>
+
+    <div id="status"></div>
+
+    <div id="outputContainer">
+        <button class="clear-btn" id="clearBtn">Clear Output</button>
+    </div>
+
     <script src="sidebar.js"></script>
 </body>
 </html> 
